--- a/Sudoku.html
+++ b/Sudoku.html
@@ -3,18 +3,14 @@
 
 <head>
 	<title>Sudoku Solver</title>
-	<link rel="stylesheet" type="text/css" href="sudoku.css"/>
-	<!--<script type="text/javascript" src="script.js"></script>-->
+	<script type="text/javascript" src="jquery-1.9.1.js"></script>
+	<link rel="stylesheet" type="text/css" href="Sudoku.css"/>
+	<script type="text/javascript" src="Sudoku.js"></script>
+	
 	
 </head>
 
 <body>
-
-<style type="text/css">
-input {
-  width: 35px; height: 35px; font-size: 35px; border: none; text-align: center;
-}
-</style>
 
 <table cellpadding="0" cellspacing="0" style="width: 325px; border-collapse: collapse;">
   <tr>
@@ -118,6 +114,9 @@ input {
   </tr>
 </table>
 	
+<div id="set" >Set</div>
+<div id="solve">Solve</div>
+
 </body>
 
 </html>
